--- a/_config.yml
+++ b/_config.yml
@@ -62,8 +62,8 @@ steam:              username
 #xmpp:              username@server.com
 #hackernews:        username
 
-# Gems
-gems:
+# Plugins
+plugins:
   - jekyll-mentions
   - jekyll-feed
   - jekyll-sitemap
